# metricsCollector

./: .gitignore  CMakeLists.txt  Readme.md
examples/: CMakeLists.txt
examples/custom_logger/: CMakeLists.txt  custom_logger.cpp  customlogger.h
examples/simple_example/: CMakeLists.txt  simple_example.cpp
include/: consolelogger.h  filelogger.h  filewrapper.h  ioutputstream.h  istat.h  statistics.h  statscheduler.h
include/statistics/: cpustatistics.h  httpstatistic.h  networkstatistic.h
src/: CMakeLists.txt  filewrapper.cpp  statistics.cpp  statscheduler.cpp
tests/: CMakeLists.txt  simple.cpp
